
Post Jena 2.1 change list

  RDF API
      o Fixed bug in typed literals support which caused isValidLiteral tests
        to fail on user defined types derived indirectly from simple types.
      o Fixed bugs in conversion of Calendar to XSDDateTime
      o Fixed XSDDouble isValidValue test to check for Double
      o Fixed XSDbase64Binary, XSDhexBinary returning strings instead of byte[]

  Reasoners
      o Fixed ommission in handling of someValuesFrom applied to an rdfs:Datatype.
      o Fixed bug in hide() table not being carried across from prebuilt
        reasoner caches, which resulted in the prototypical instance of
        owl:Thing being visible in listIndividuals.
      o Fixed bug in TransitiveReasoner reported by wangxiao
      o Changed delete for RETE reasoner to be non-incremental to work around
        bug without demanding full reference counting
      o Added experimental OWLMini and OWLMicro reasoners

  PrefixMappings
      o Standard no longer contains vcard, jms, or rss.
      o Extended introduced = Standard + vcard, jms, rss.
      o usePrefix deprecated - use shortForm instead.
      o qnameFor added; result is legal qname or null.

  Exceptions
      o added WrappedException extends JenaException for wrapped exceptions
      o added WrappedIOException extends WrappedException

  Node
      o Node cache hash table replaced by specialised implementation
      o new Node methods getNameSpace, getLocalName, hasURI(String)
      o minor adjustments to Node.create(String) to allow for specifying
        language or type for literals, use of default prefix, and
        elimination of the nn-NN hack for numeric literals. 

  Triple
      o Triple.create now uses a cache

  Resource
      o new method hasURI(String)

   Ontology API
      o Added a new method getOWLLanguageLevel() to OntModel, which returns the
        OWL sublanguage - lite, DL or full - and error messages